--- a/db_compare/pom.xml
+++ b/db_compare/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+        	<groupId>groovy</groupId>
+        	<artifactId>gram</artifactId>
+        	<version>1.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
