--- a/db_compare/.classpath
+++ b/db_compare/.classpath
@@ -27,5 +27,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="lib/h2-1.4.191.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
