--- a/db_compare/pom.xml
+++ b/db_compare/pom.xml
@@ -28,6 +28,21 @@
         	<artifactId>gram</artifactId>
         	<version>1.1</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-lang3</artifactId>
+        	<version>3.3.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>commons-lang</groupId>
+        	<artifactId>commons-lang</artifactId>
+        	<version>2.6</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.neo4j</groupId>
+        	<artifactId>neo4j-cypher-compiler-2.2</artifactId>
+        	<version>2.2.5</version>
+        </dependency>
     </dependencies>
 
     <properties>
