--- a/db_compare/src/main/java/db.properties
+++ b/db_compare/src/main/java/db.properties
@@ -8,7 +8,7 @@ target.url=
 target.username=
 target.password=
 
-h2.driverClass=
-h2.url=
-h2.username=
+h2.driverClass=org.h2.Driver
+h2.url=jdbc:h2:./database
+h2.username=sa
 h2.password=
