--- a/db_compare/src/main/java/db.properties
+++ b/db_compare/src/main/java/db.properties
@@ -2,11 +2,13 @@ src.driverClass=oracle.jdbc.driver.OracleDriver
 src.url=jdbc:oracle:thin:@127.0.0.1:1521:XE
 src.username=oracle
 src.password=oracle
+src.compartor=com.core.impl.OracleDbCompartor
 
-target.driverClass=
-target.url=
-target.username=
-target.password=
+tar.driverClass=
+tar.url=
+tar.username=
+tar.password=
+tar.compartor=com.core.impl.OracleDbCompartor
 
 h2.driverClass=org.h2.Driver
 h2.url=jdbc:h2:./database
