--- a/db_compare/src/main/java/db.properties
+++ b/db_compare/src/main/java/db.properties
@@ -12,5 +12,5 @@ tar.compartor=com.core.impl.OracleDbCompartor
 
 h2.driverClass=org.h2.Driver
 h2.url=jdbc:h2:./database
-h2.username=sa
+h2.username=SA
 h2.password=
