--- a/db_compare/pom.xml
+++ b/db_compare/pom.xml
@@ -24,11 +24,6 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-        	<groupId>groovy</groupId>
-        	<artifactId>gram</artifactId>
-        	<version>1.1</version>
-        </dependency>
-        <dependency>
         	<groupId>org.apache.commons</groupId>
         	<artifactId>commons-lang3</artifactId>
         	<version>3.3.2</version>
@@ -39,9 +34,9 @@
         	<version>2.6</version>
         </dependency>
         <dependency>
-        	<groupId>org.neo4j</groupId>
-        	<artifactId>neo4j-cypher-compiler-2.2</artifactId>
-        	<version>2.2.5</version>
+        	<groupId>commons-logging</groupId>
+        	<artifactId>commons-logging</artifactId>
+        	<version>1.2</version>
         </dependency>
     </dependencies>
 
