--- a/db_compare/pom.xml
+++ b/db_compare/pom.xml
@@ -32,6 +32,14 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>com.h2database</groupId>
+        	<artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
