--- a/db_compare/pom.xml
+++ b/db_compare/pom.xml
@@ -40,6 +40,11 @@
         	<groupId>com.h2database</groupId>
         	<artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.18</version>
+		</dependency>
     </dependencies>
 
     <properties>
