--- a/db_compare/src/main/resources/application.properties
+++ b/db_compare/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:h2:./database
 spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.aop.auto=true
