--- a/db_compare/pom.xml
+++ b/db_compare/pom.xml
@@ -54,6 +54,12 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.4</version>
 		</dependency>
+		
+		<dependency>  
+		    <groupId>com.oracle</groupId>  
+		    <artifactId>ojdbc14</artifactId>  
+		    <version>10.2.0.1.0</version>  
+		</dependency> 
     </dependencies>
 
     <properties>
