设置上传文件大小

--- a/db_compare/src/main/resources/application.properties
+++ b/db_compare/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.aop.auto=true
+
+multipart.maxFileSize=50Mb
+multipart.maxRequestSize=50Mb
